# DigitalCurling3-ClientExamples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ex0-template/: CMakeLists.txt  ex0-template.cpp
ex1-stdio/: CMakeLists.txt  ex1-stdio.cpp
rulebased/: CMakeLists.txt  rulebased.cpp
stdio/: CMakeLists.txt  stdio.cpp
template/: CMakeLists.txt  template.cpp
